test/end-to-end/compile-errors/trusted-unnecessary.crow
main void()
	()

f nat*() unsafe, native extern
	trusted null

f nat*() native extern
	trusted trusted null

f nat() native extern
	# testing twice to verify that we reset 'usedTrusted' after each 'trusted'
	_ nat = trusted 0
	trusted 0
